# rust-http-server

./: Cargo.toml  README.md  watch.sh
src/: domain.rs  main.rs
