[package]
name = "rust-http-server"
version = "0.1.0"
authors = ["Andreas Haessler <andreas.haessler@outlook.at>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
listenfd = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
